--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
     "@types/tinycolor2": "^1.4.6",
+    "eslint": "^8.56.0",
     "next": "latest",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
