Install styled-components + change element tag to use styling library

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
+    "styled-components": "^6.1.6",
     "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
